--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ log = "0.4.6"
 env_logger = "0.6.1"
 html2md = "0.2.8"
 chrono = {version = "0.4.6", features = ["serde"]}
+markup5ever = "0.7.5"
+percent-encoding = "1.0.1"
